# uptycs_osquery_extensions

./: CONTRIBUTING.md  README.md
extension_java_packages/: CMakeLists.txt  README.md  java_package_utils.cpp  java_packages.cpp
extension_java_packages/patch/: LibZipCmake
